# ER-Save-Editor

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
icon/: credits.md  readme.md
src/: main.rs  updater.rs
src/db/: accessory_name.rs  aow_name.rs  aows.rs  armor_name.rs  armors.rs  bosses.rs  classes.rs  colosseums.rs  cookbooks.rs  dump.rs  event_flags.rs  graces.rs  item_name.rs  items.rs  map_name.rs  maps.rs  mod.rs  regions.rs  stats.rs  summoning_pools.rs  talismans.rs  weapon_name.rs  weapons.rs  whetblades.rs
src/read/: read.rs
src/save/: mod.rs  save.rs  save_slot.rs  user_data_10.rs  user_data_11.rs
src/save/common/: mod.rs  save_slot.rs  user_data_10.rs  user_data_11.rs
src/save/pc/: mod.rs  pc_save.rs  save_header.rs  save_slot.rs  user_data_10.rs  user_data_11.rs
src/save/playstation/: mod.rs  ps_save.rs  save_header.rs  user_data_10.rs
src/save/save_wizard/: mod.rs
src/ui/: equipment.rs  events.rs  general.rs  importer.rs  inventory.rs  menu.rs  mod.rs  none.rs  regions.rs  stats.rs
src/ui/custom/: checkbox.rs  mod.rs
src/ui/inventory/: add.rs  browse.rs  inventory.rs  mod.rs
src/util/: bit.rs  bnd4.rs  br_ext.rs  mod.rs  nya.rs  param_structs.rs  params.rs  regulation.rs  validator.rs
src/vm/: equipment.rs  events.rs  general.rs  importer.rs  inventory.rs  mod.rs  profile_summary.rs  regions.rs  regulation.rs  slot.rs  stats.rs  vm.rs
src/vm/inventory/: add_bulk.rs  add_single.rs  mod.rs
src/write/: mod.rs  write.rs
