[package]
name = "er-save-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
binary-reader = "0.4.5"
eframe = "0.26.2"
egui-phosphor = { version = "0.4.0", features = ["regular", "fill"] }
egui_extras = "0.26.2"
env_logger = "0.11.2"
md5 = "0.7.0"
once_cell = "1.19.0"
rfd = "0.13.0"
strsim = "0.11.0"
