[package]
name = "er-save-editor"
version = "0.2.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
binary-reader = "0.4.5"
bitflags = "2.4.2"
cbc = "0.1.2"
eframe = "0.26.2"
egui-phosphor = { version = "0.4.0", features = ["regular", "fill"] }
egui_extras = "0.26.2"
encoding_rs = "0.8.33"
env_logger = "0.11.2"
image = "0.25.0"
md5 = "0.7.0"
miniz_oxide = "0.7.2"
once_cell = "1.19.0"
rfd = "0.13.0"
rust-embed = "8.3.0"
strsim = "0.11.0"
tempfile = "3.0.0"

[build-dependencies]
winres = "0.1.12"
